--- a/Backend /package.json
+++ b/Backend /package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "echo \"no build required'",
     "dev": "nodemon index.js"
   },
   "keywords": [],
