--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "echo \"no build required'",
+    "build" : "echo \"no build required\"",
     "dev": "nodemon index.js"
   },
   "keywords": [],
