--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "echo \"no build required\"",
-    "dev": "nodemon index.js"
+    "start": "node server.js", 
+    "dev": "nodemon server.js",     
+    "build": "echo \"no build required\""
   },
   "keywords": [],
   "author": "",
