--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js", 
     "dev": "nodemon index.js",     
-    "build": "echo \"no build required\""
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
