--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "mysql2": "^3.15.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
-    "openai": "^5.21.0"
+    "openai": "^5.21.0",
+    "uuid": "^13.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
