--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "openai": "^5.21.0",
+    "querystring": "^0.2.1",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.13"
   }
