--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "openai": "^5.21.0",
     "querystring": "^0.2.1",
     "uuid": "^8.3.2",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "ws": "^8.18.3"
   }
 }
